lab/lab2/src/syntax.output
State 25 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | STRUCT OptTag LC error RC

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID LP error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | LC error RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT
   64    | ID LP error RP
   65    | Exp LB error RB

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 14 20 23 28 37 41 64 65
INT (258) 19 62
FLOAT (259) 63
ID (260) 15 17 18 21 22 23 57 58 60 61 64
SEMI (261) 4 5 7 31 33 37 40 41
COMMA (262) 9 24 43 66
ASSIGNOP (263) 45 46
RELOP (264) 49
PLUS (265) 50
MINUS (266) 51 55
STAR (267) 52
DIV (268) 53
AND (269) 47
OR (270) 48
NOT (271) 56
DOT (272) 60
TYPE (273) 10
LP (274) 21 22 23 34 35 36 54 57 58 64
RP (275) 21 22 23 34 35 36 54 57 58 64
LB (276) 19 20 59 65
RB (277) 19 20 59 65
LC (278) 12 14 27 28
RC (279) 12 14 27 28
STRUCT (280) 12 13 14
RETURN (281) 33
IF (282) 34 35
ELSE (283) 35
WHILE (284) 36
UMINUS (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7, on right: 2
ExtDecList (36)
    on left: 8 9, on right: 4 9
Specifier (37)
    on left: 10 11, on right: 4 5 6 26 40
StructSpecifier (38)
    on left: 12 13 14, on right: 11
OptTag (39)
    on left: 15 16, on right: 12 14
Tag (40)
    on left: 17, on right: 13
VarDec (41)
    on left: 18 19 20, on right: 8 9 19 20 26 44 45
FunDec (42)
    on left: 21 22 23, on right: 6
VarList (43)
    on left: 24 25, on right: 21 24
ParamDec (44)
    on left: 26, on right: 24 25
CompSt (45)
    on left: 27 28, on right: 6 32
StmtList (46)
    on left: 29 30, on right: 27 29
Stmt (47)
    on left: 31 32 33 34 35 36 37, on right: 29 34 35 36
DefList (48)
    on left: 38 39, on right: 12 27 38
Def (49)
    on left: 40 41, on right: 38
DecList (50)
    on left: 42 43, on right: 40 43
Dec (51)
    on left: 44 45, on right: 42 43
Exp (52)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65, on right: 31 33 34 35 36 45 46 47 48 49 50 51 52 53 54 55
    56 59 60 65 66 67
Args (53)
    on left: 66 67, on right: 57 66


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   14                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 10

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 10

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 20


State 12

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   23       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 18 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 18

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 20

   12 StructSpecifier: STRUCT OptTag LC . DefList RC
   14                | STRUCT OptTag LC . error RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 39 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 29
    Def              go to state 30


State 21

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP
   23       | ID LP . error RP

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 18


State 24

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 38
    INT    shift, and go to state 39


State 25

   27 CompSt: LC . DefList StmtList RC
   28       | LC . error RC

    error   shift, and go to state 40
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 30


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   14 StructSpecifier: STRUCT OptTag LC error . RC
   41 Def: error . SEMI

    SEMI  shift, and go to state 42
    RC    shift, and go to state 43


State 28

   40 Def: Specifier . DecList SEMI

    ID  shift, and go to state 36

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


State 30

   38 DefList: Def . DefList

    error   shift, and go to state 48
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 30


State 31

   23 FunDec: ID LP error . RP

    RP  shift, and go to state 50


State 32

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 33

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 51


State 34

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 35

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 25 (VarList)


State 36

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 37

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 38

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 54


State 39

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 55


State 40

   28 CompSt: LC error . RC
   41 Def: error . SEMI

    SEMI  shift, and go to state 42
    RC    shift, and go to state 56


State 41

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 25
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


State 42

   41 Def: error SEMI .

    $default  reduce using rule 41 (Def)


State 43

   14 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 14 (StructSpecifier)


State 44

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 24

    $default  reduce using rule 44 (Dec)


State 45

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 72


State 46

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 42 (DecList)


State 47

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 48

   41 Def: error . SEMI

    SEMI  shift, and go to state 42


State 49

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 50

   23 FunDec: ID LP error RP .

    $default  reduce using rule 23 (FunDec)


State 51

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 26 (ParamDec)


State 52

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 53

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 35


State 54

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 55

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 56

   28 CompSt: LC error RC .

    $default  reduce using rule 28 (CompSt)


State 57

   37 Stmt: error . SEMI

    SEMI  shift, and go to state 75


State 58

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


State 59

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


State 60

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   61    | ID .
   64    | ID . LP error RP

    LP  shift, and go to state 76

    $default  reduce using rule 61 (Exp)


State 61

   55 Exp: MINUS . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 77


State 62

   56 Exp: NOT . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 78


State 63

   54 Exp: LP . Exp RP

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 79


State 64

   33 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 80


State 65

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 81


State 66

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 82


State 67

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 68

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 83


State 69

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 25
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 84
    Stmt      go to state 69
    Exp       go to state 70


State 70

   31 Stmt: Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID
   65    | Exp . LB error RB

    SEMI      shift, and go to state 85
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


State 71

   45 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 96


State 72

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 73

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 44
    DecList  go to state 97
    Dec      go to state 46


State 74

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 75

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 76

   57 Exp: ID LP . Args RP
   58    | ID LP . RP
   64    | ID LP . error RP

    error  shift, and go to state 98
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    RP     shift, and go to state 99

    Exp   go to state 100
    Args  go to state 101


State 77
